--- a/index.html
+++ b/index.html
@@ -11,8 +11,66 @@
 
   <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
   <script src="js/vendor/modernizr.js"></script>
+
+  <!-- New Script: Real-time Weather with Geolocation and OpenWeatherMap API -->
+  <script>
+    $(document).ready(function() {
+      // Check if the browser supports the Geolocation API
+      if (navigator.geolocation) {
+        // Get the user's current location
+        navigator.geolocation.getCurrentPosition(successCallback, errorCallback);
+      } else {
+        // Geolocation is not supported
+        console.log("Geolocation is not supported by this browser.");
+      }
+
+      // Success callback function
+      function successCallback(position) {
+        const latitude = position.coords.latitude;
+        const longitude = position.coords.longitude;
+
+        // Call the OpenWeatherMap API to get weather data
+        const apiKey = '94b888228e6424c4dc13a276d197cf29';
+        const apiUrl = `https://api.openweathermap.org/data/2.5/weather?lat=${latitude}&lon=${longitude}&appid=${apiKey}&units=metric`;
+
+        // Fetch weather data
+        fetch(apiUrl)
+          .then(response => response.json())
+          .then(data => {
+            // Extract relevant weather information
+            const cityName = data.name;
+            const temperature = data.main.temp;
+            const weatherDescription = data.weather[0].description;
+
+            // Display weather information at the top of the page
+            const weatherContainer = document.getElementById('weather-container');
+            weatherContainer.innerHTML = `
+              <p class="content">Current Weather in ${cityName}: ${temperature}°C, ${weatherDescription}</p>
+            `;
+          })
+          .catch(error => {
+            console.error('Error fetching weather data:', error);
+          });
+      }
+
+      // Error callback function
+      function errorCallback(error) {
+        console.error('Error getting user location:', error.message);
+      }
+    });
+  </script>
 </head>
 <body class="page-home">
+
+  <!-- New Section: Real-time Weather at the Top -->
+  <section class="home-weather">
+    <div class="row column">
+      <h2 class="section-title">Current Weather</h2>
+      <div id="weather-container">
+        <p class="content">Loading weather...</p>
+      </div>
+    </div>
+  </section>
 
   <header class="site-header">
     <h1 class="title">Jeremy Tollison's Wild Rydes Site</h1>
@@ -170,51 +228,3 @@
 
   <script src="js/vendor.js"></script>
   <script src="js/main.js"></script>
-
-<!-- New Script: Real-time Weather with Geolocation and OpenWeatherMap API -->
-<script>
-  $(document).ready(function() {
-    // Check if the browser supports the Geolocation API
-    if (navigator.geolocation) {
-      // Get the user's current location
-      navigator.geolocation.getCurrentPosition(successCallback, errorCallback);
-    } else {
-      // Geolocation is not supported
-      console.log("Geolocation is not supported by this browser.");
-    }
-
-    // Success callback function
-    function successCallback(position) {
-      const latitude = position.coords.latitude;
-      const longitude = position.coords.longitude;
-
-      // Call the OpenWeatherMap API to get weather data
-      const apiKey = '94b888228e6424c4dc13a276d197cf29';
-      const apiUrl = `https://api.openweathermap.org/data/2.5/weather?lat=${latitude}&lon=${longitude}&appid=${apiKey}&units=metric`;
-
-      // Fetch weather data
-      fetch(apiUrl)
-        .then(response => response.json())
-        .then(data => {
-          // Extract relevant weather information
-          const cityName = data.name;
-          const temperature = data.main.temp;
-          const weatherDescription = data.weather[0].description;
-
-          // Display weather information in the designated container
-          const weatherContainer = document.getElementById('weather-container');
-          weatherContainer.innerHTML = `
-            <p class="content">Current Weather in ${cityName}: ${temperature}°C, ${weatherDescription}</p>
-          `;
-        })
-        .catch(error => {
-          console.error('Error fetching weather data:', error);
-        });
-    }
-
-    // Error callback function
-    function errorCallback(error) {
-      console.error('Error getting user location:', error.message);
-    }
-  });
-</script>
