--- a/index.html
+++ b/index.html
@@ -13,52 +13,53 @@
   <script src="js/vendor/modernizr.js"></script>
 
   <!-- New Script: Real-time Weather with Geolocation and OpenWeatherMap API -->
-  <script>
-    $(document).ready(function() {
-      // Check if the browser supports the Geolocation API
-      if (navigator.geolocation) {
-        // Get the user's current location
-        navigator.geolocation.getCurrentPosition(successCallback, errorCallback);
-      } else {
-        // Geolocation is not supported
-        console.log("Geolocation is not supported by this browser.");
-      }
+<script>
+  $(document).ready(function() {
+    // Check if the browser supports the Geolocation API
+    if (navigator.geolocation) {
+      // Get the user's current location
+      navigator.geolocation.getCurrentPosition(successCallback, errorCallback);
+    } else {
+      // Geolocation is not supported
+      console.log("Geolocation is not supported by this browser.");
+    }
 
-      // Success callback function
-      function successCallback(position) {
-        const latitude = position.coords.latitude;
-        const longitude = position.coords.longitude;
+    // Success callback function
+    function successCallback(position) {
+      const latitude = position.coords.latitude;
+      const longitude = position.coords.longitude;
 
-        // Call the OpenWeatherMap API to get weather data
-        const apiKey = '94b888228e6424c4dc13a276d197cf29';
-        const apiUrl = `https://api.openweathermap.org/data/2.5/weather?lat=${latitude}&lon=${longitude}&appid=${apiKey}&units=metric`;
+      // Call the OpenWeatherMap API to get weather data in Fahrenheit
+      const apiKey = '94b888228e6424c4dc13a276d197cf29';
+      const apiUrl = `https://api.openweathermap.org/data/2.5/weather?lat=${latitude}&lon=${longitude}&appid=${apiKey}&units=imperial`;
 
-        // Fetch weather data
-        fetch(apiUrl)
-          .then(response => response.json())
-          .then(data => {
-            // Extract relevant weather information
-            const cityName = data.name;
-            const temperature = data.main.temp;
-            const weatherDescription = data.weather[0].description;
+      // Fetch weather data
+      fetch(apiUrl)
+        .then(response => response.json())
+        .then(data => {
+          // Extract relevant weather information
+          const cityName = data.name;
+          const temperature = data.main.temp;
+          const weatherDescription = data.weather[0].description;
 
-            // Display weather information at the top of the page
-            const weatherContainer = document.getElementById('weather-container');
-            weatherContainer.innerHTML = `
-              <p class="content">Current Weather in ${cityName}: ${temperature}°C, ${weatherDescription}</p>
-            `;
-          })
-          .catch(error => {
-            console.error('Error fetching weather data:', error);
-          });
-      }
+          // Display weather information at the top of the page
+          const weatherContainer = document.getElementById('weather-container');
+          weatherContainer.innerHTML = `
+            <p class="content">Current Weather in ${cityName}: ${temperature}°F, ${weatherDescription}</p>
+          `;
+        })
+        .catch(error => {
+          console.error('Error fetching weather data:', error);
+        });
+    }
 
-      // Error callback function
-      function errorCallback(error) {
-        console.error('Error getting user location:', error.message);
-      }
-    });
-  </script>
+    // Error callback function
+    function errorCallback(error) {
+      console.error('Error getting user location:', error.message);
+    }
+  });
+</script>
+
 </head>
 <body class="page-home">
 
