Display updates to weather and nasa api

--- a/index.html
+++ b/index.html
@@ -104,6 +104,8 @@
     </div>
   </section>
 
+  <div id="nasa-container"></div>
+  
   <header class="site-header">
     <h1 class="title">Jeremy Tollison's Wild Rydes Site</h1>
     <nav class="site-nav">
@@ -206,16 +208,6 @@
           “I was almost late to my ultimate frisbee tournament in DOLORES park. BUt Wild Rydes Got me there from the marina in under five minutes.”
         </div>
         <div class="quoter">- Satisfied Wild Rydes User</div>
-      </div>
-    </div>
-  </section>
-
-  <!-- New Section: Real-time Weather -->
-  <section class="home-weather">
-    <div class="row column">
-      <h2 class="section-title">Current Weather</h2>
-      <div id="weather-container">
-        <p class="content">Loading weather...</p>
       </div>
     </div>
   </section>
