NASA API potd changes

--- a/index.html
+++ b/index.html
@@ -79,7 +79,14 @@
         // Display NASA information below the weather
         document.getElementById('nasa-title').innerHTML = `<p>${title}</p>`;
         document.getElementById('nasa-explanation').innerHTML = `<p>${explanation}</p>`;
-        document.getElementById('nasa-image').innerHTML = `<img src="${imageUrl}" alt="NASA APOD">`;
+
+        // Use an iframe to embed the image
+        const iframe = document.createElement('iframe');
+        iframe.setAttribute('src', imageUrl);
+        iframe.setAttribute('width', '100%');
+        iframe.setAttribute('height', '400px');
+        iframe.setAttribute('frameborder', '0');
+        document.getElementById('nasa-image').appendChild(iframe);
       })
       .catch(error => {
         console.error('Error fetching NASA data:', error);
@@ -100,13 +107,12 @@
     </div>
   </section>
 
-<!-- Add this div where you want the NASA information to be displayed -->
-<div id="nasa-container">
-  <h2 class="section-title">NASA Astronomy Picture of the Day</h2>
-  <div class="content" id="nasa-title"></div>
-  <div class="content" id="nasa-explanation"></div>
-  <div id="nasa-image"></div>
-</div>
+  <div id="nasa-container">
+    <h2 class="section-title">NASA Astronomy Picture of the Day</h2>
+    <div class="content" id="nasa-title"></div>
+    <div class="content" id="nasa-explanation"></div>
+    <div class="content" id="nasa-image"></div>
+  </div>
 
   <header class="site-header">
     <h1 class="title">Jeremy Tollison's Wild Rydes Site</h1>
