--- a/index.html
+++ b/index.html
@@ -97,23 +97,26 @@
 </head>
 <body class="page-home">
 
-  <!-- New Section: Real-time Weather at the Top -->
-  <section class="home-weather">
-    <div class="row column">
-      <h2 class="section-title">Current Weather</h2>
-      <div id="weather-container">
-        <p class="content">Loading weather...</p>
+  <section class="home-quote">
+    <div class="row column medium-8 xxlarge-6">
+      <section class="home-weather">
+        <div class="row column">
+              <h2 class="section-title">Current Weather</h2>
+              <div id="weather-container">
+                <p class="content">Loading weather...</p>
+              </div>
+        </div>
+      </section>
+
+      <div id="nasa-container">
+        <h2 class="section-title">NASA Astronomy Picture of the Day</h2>
+        <div class="content" id="nasa-title"></div>
+        <div class="content" id="nasa-explanation"></div>
+        <div class="content" id="nasa-image"></div>
       </div>
     </div>
+    <h2 class="section-title">Scroll Down!</h2>
   </section>
-
-  <div id="nasa-container">
-    <h2 class="section-title">NASA Astronomy Picture of the Day</h2>
-    <div class="content" id="nasa-title"></div>
-    <div class="content" id="nasa-explanation"></div>
-    <div class="content" id="nasa-image"></div>
-  </div>
-
   <header class="site-header">
     <h1 class="title">Jeremy Tollison's Wild Rydes Site</h1>
     <nav class="site-nav">
