--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         <h2 class="section-title">NASA Astronomy Picture of the Day</h2>
         <div class="content" id="nasa-title"></div>
         <div class="content" id="nasa-explanation"></div>
-        <div class="content" id="nasa-image"></div>
+        <div class="content" id="nasa-media"></div>
       </div>
     </div>
     <h2 class="section-title">Scroll Down!</h2>
